# miniz4cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: zip.cpp  zip.h
test/: main.cpp
